tests/expectations/compiler/core/algorithms/sha3_384_hash_to_address.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:26
     |
  28 |         let a: address = SHA3_384::hash_to_address(addr_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:26
     |
  29 |         let b: address = SHA3_384::hash_to_address(bool_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:26
     |
  30 |         let c: address = SHA3_384::hash_to_address(field_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:26
     |
  31 |         let d: address = SHA3_384::hash_to_address(group_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:26
     |
  32 |         let e: address = SHA3_384::hash_to_address(i8_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:26
     |
  33 |         let f: address = SHA3_384::hash_to_address(i16_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:26
     |
  34 |         let g: address = SHA3_384::hash_to_address(i32_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:26
     |
  35 |         let h: address = SHA3_384::hash_to_address(i64_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:26
     |
  36 |         let i: address = SHA3_384::hash_to_address(i128_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:26
     |
  37 |         let j: address = SHA3_384::hash_to_address(u8_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:26
     |
  38 |         let k: address = SHA3_384::hash_to_address(u16_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:26
     |
  39 |         let l: address = SHA3_384::hash_to_address(u32_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:26
     |
  40 |         let m: address = SHA3_384::hash_to_address(u64_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:26
     |
  41 |         let n: address = SHA3_384::hash_to_address(u128_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:26
     |
  42 |         let o: address = SHA3_384::hash_to_address(scalar_value);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:26
     |
  44 |         let q: address = SHA3_384::hash_to_address(Foo { a: 1u128, b: 1u128 });
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
